_ltu-components/src/text/scss/_text.scss
// depenencies
@use "config";

//
// Typography
//

html {
    font-size: 16px;
    line-height: (24 / 16);

    @media(min-width: 1441px){
        font-size: 18px; // increase base font size for large displays
        line-height: (28 / 18);
    }
}

body {
    font-family: config.$font-roboto;
    font-weight: config.$regular;
    font-size: 1rem;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

h1, .h1,
h2, .h2,
h3, .h3,
h4, .h4,
h5, .h5,
h6, .h6 {
    font-weight: config.$medium;
    max-width: 42em; // readable line length < 80 characters https://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-visual-presentation.html
    margin: 0;

    &:empty {
        margin: 0;
    }
}

h1, .h1,
h2, .h2,
h3, .h3,
h4, .h4 {
    line-height: 1.2;
    max-width: 30em; // readable line length < 80 characters https://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-visual-presentation.html
}

h1, .h1 {
    font-size: config.$h1;
    @media(min-width: 1024px){
        font-size: config.$h1 * config.$heading-scale-ratio; // step up h1 size by one scale point
    }
}

h2, .h2 {
    font-size: config.$h2;
    max-width: 24em; // readable line length < 80 characters https://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-visual-presentation.html
}

h3, .h3 {
    font-size: config.$h3;
}

h4, .h4 {
    font-size: config.$h4;
}

h5, .h5 {
    font-size: config.$h5;
}

h6, .h6 {
    font-size: config.$h6;
    text-transform: uppercase;
    font-weight: config.$black;
}


//
// Body copy
//

p {
    max-width: 42em; // readable line length 80 characters https://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-visual-presentation.html
    margin: 0;
}

/* lead paragraph */
p.ds-lead {
    position: relative;
    font-size: 1.4rem;
    margin-bottom: config.spunits(8);
    &::before {
        content: "";
        display: block;
        width: 32px;
        height: 32px;
        background-image: url("icons/latrobe-chevron-RGB.svg");
        background-repeat: no-repeat;
        background-size: 100%;
        margin-bottom: config.spunits(2);
    }
    @media(min-width: 768px) {
        padding-right: 32px;
    }
}

p.ds-small,
small {
    font-size: 0.8rem;
}

p:empty,
li:empty {
    display: none;
}

ol,
ul {
    margin: 0;
    padding: 0 0 0 40px;
}

li {
    max-width: 42em; // readable line length 80 characters https://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-visual-presentation.html
}

// for squiz content template
div.ds-list {
    &--two-col,
    &--three-col,
    &--four-col {
        max-width: 62rem;
        @media(min-width: 600px) {
            > ul, 
            > ol {
                columns: 2;
            }

            li {
                padding-right: 1rem;
            }
        }
    }

    &--three-col,
    &--four-col {
        @media(min-width: 768px) {
            > ul, 
            > ol {
                columns: 3;
            }
        }
    }

    &--four-col {
        @media(min-width: 1024px) {
            > ul, 
            > ol {
                columns: 4;
            }
        }
    }
}

// Margins

h1  {
    margin-top: 1em;
    margin-bottom: 1em;
}

h2,
h3,
h4,
h5,
h6 {
    margin-top: 2em; // based on element size
}

p,
ol,
ul {
    margin-top: 1em; // based on element size
}

li {
    margin-bottom: 0.5em; // based on element size
}

blockquote,
table {
    margin-top: 4rem; // based on element size
}

br {
     margin-top: 0; // firefox fix
}

/* margins for WYSIWYG text align center and right to cater for line-length restriction */
[style*="text-align: center"] {
    margin-left: auto;
    margin-right: auto;
}
[style*="text-align: right"] {
    margin-left: auto;
}

//
// Fluid Headings
//

.h1-fluid {
    @media (min-width: 1024px) {
        font-size: calc(64px + (72 - 64) * ((100vw - 1024px) / (1920 - 1024)));
    }
}


//
// inline text elements
//

abbr,
acronym {
    cursor: help;
}

abbr[title] {
    border-bottom: 1px dotted;
    text-decoration: none;
}

b,
strong {
    font-weight: 500;
}

dfn {
    font-style: italic;
}

hr {
    display: block;
    height: 2px;
    border: 0;
    border-top: 2px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

ins {
    background: #ff9;
    color: #000;
    text-decoration: none;
}

mark {
    background: #ff0;
    color: #000;
    font-style: italic;
    font-weight: 500;
}

pre {
    font-family: monospace, monospace;
    font-size: 1em;
}

pre {
    white-space: pre;
    white-space: pre-wrap;
    word-wrap: break-word;
}

q {
    quotes: "‘" "’" "“" "”" ;
}

q:before {
    content: open-quote;
}

q:after {
    content: close-quote;
}

